--- a/Model/packages.config
+++ b/Model/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="SQLite" version="3.13.0" targetFramework="net472" />
+  <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.112.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.112.0" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.112.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.112.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
 </packages>
