--- a/Presenter/Presenter.csproj
+++ b/Presenter/Presenter.csproj
@@ -43,7 +43,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessRegistrationPresenter.cs" />
     <Compile Include="AdminPresenter.cs" />
+    <Compile Include="IAccessRegistrationPresenter.cs" />
     <Compile Include="IAdminPresenter.cs" />
     <Compile Include="ILoginPresenter.cs" />
     <Compile Include="IRegistrationPresenter.cs" />
