--- a/Cats/View.csproj
+++ b/Cats/View.csproj
@@ -78,6 +78,10 @@
       <DependentUpon>AccessRegistration.xaml</DependentUpon>
     </Compile>
     <Compile Include="AccessRegistrationView.cs" />
+    <Compile Include="AddFeeder.xaml.cs">
+      <DependentUpon>AddFeeder.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddFeederView.cs" />
     <Compile Include="Admin.xaml.cs">
       <DependentUpon>Admin.xaml</DependentUpon>
     </Compile>
@@ -87,7 +91,15 @@
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
     <Compile Include="RegistrationView.cs" />
+    <Compile Include="UserProfiler.xaml.cs">
+      <DependentUpon>UserProfiler.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserProfilerView.cs" />
     <Page Include="AccessRegistration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddFeeder.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -108,6 +120,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Registration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserProfiler.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
