--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -52,7 +52,9 @@
     <Compile Include="IAdminModel.cs" />
     <Compile Include="IDataBaseFeeder.cs" />
     <Compile Include="IDataBaseUser.cs" />
+    <Compile Include="ISynchronizationClass.cs" />
     <Compile Include="RegistrationData.cs" />
+    <Compile Include="SynchronizationClass.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
