--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -48,9 +48,11 @@
     <Compile Include="AdminModel.cs" />
     <Compile Include="DataBase.cs" />
     <Compile Include="DataBaseFeeder.cs" />
+    <Compile Include="DataBaseTags.cs" />
     <Compile Include="DataBaseUser.cs" />
     <Compile Include="IAdminModel.cs" />
     <Compile Include="IDataBaseFeeder.cs" />
+    <Compile Include="IDataBaseTags.cs" />
     <Compile Include="IDataBaseUser.cs" />
     <Compile Include="ISynchronizationClass.cs" />
     <Compile Include="RegistrationData.cs" />
