--- a/Presenter/Presenter.csproj
+++ b/Presenter/Presenter.csproj
@@ -45,9 +45,11 @@
   <ItemGroup>
     <Compile Include="AccessRegistrationPresenter.cs" />
     <Compile Include="AddFeederPresenter.cs" />
+    <Compile Include="AddTagPresenter.cs" />
     <Compile Include="AdminPresenter.cs" />
     <Compile Include="IAccessRegistrationPresenter.cs" />
     <Compile Include="IAddFeederPresenter.cs" />
+    <Compile Include="IAddTagPresenter.cs" />
     <Compile Include="IAdminPresenter.cs" />
     <Compile Include="ILoginPresenter.cs" />
     <Compile Include="IRegistrationPresenter.cs" />
