Work with server

--- a/Cats/View.csproj
+++ b/Cats/View.csproj
@@ -44,6 +44,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.3.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="NetworkCommsDotNet, Version=3.0.0.0, Culture=neutral, PublicKeyToken=f58108eb6480f6ec, processorArchitecture=MSIL">
+      <HintPath>..\packages\NetworkCommsDotNet.3.0.3\lib\NetworkCommsDotNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -99,6 +102,7 @@
     </Compile>
     <Compile Include="DeleteTagView.cs" />
     <Compile Include="LoginView.cs" />
+    <Compile Include="MainWindowView.cs" />
     <Compile Include="ManualFeeding.xaml.cs">
       <DependentUpon>ManualFeeding.xaml</DependentUpon>
     </Compile>
